<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="_1234_nitrkl_ac_in">1234@nitrkl.ac.in</string>
    <string name="notifications">Notifications</string>
    <string name="theme">Theme</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="themetitle">Choose Theme</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
</resources>