<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/_1234_nitrkl_ac_in"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/notification_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/notifications"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintTop_toBottomOf="@+id/email_id" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/theme"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintTop_toBottomOf="@+id/notification_settings"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/terms_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/terms_and_conditions"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintTop_toBottomOf="@+id/theme"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/privacy_policy"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintTop_toBottomOf="@+id/terms_conditions"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/logout"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintTop_toBottomOf="@+id/privacy_policy"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
